[package]
name = "iota-supply-service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
axum = "0.8.3"
clap = { version = "4.5.35", features = ["derive", "env"] }
http = "1.3.1"
iota-sdk = { git = "https://github.com/iotaledger/iota.git", rev = "ac6cd1851e9ab6da66c18f7e0ebd071362df23f2"}
serde = "1.0.219"
thiserror = "2.0.12"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "signal"] }
tokio-util = "0.7.14"
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = { version = "0.1.41", features = ["attributes"] }
tracing-subscriber = "0.3.19"
url = "2.5.4"
